syntax = "proto3";

option go_package = "./pkg/user/pb";

package user;

service UserService{
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Validate(ValidateRequest) returns (ValidateResponse);
  
    // rpc AdminLogin(LoginRequest) returns (LoginResponse);
  }
  
  message RegisterRequest{
    string email = 1;
    string password = 2;
  }
  
  message RegisterResponse{
    int64 status = 1;
    string error = 2;
  }
  
  message LoginRequest{
   string email = 1;
    string password = 2;
  }
  
  message  LoginResponse{
    int64 status = 1;
    string error = 2;
    string token = 3;
  }
  
  message ValidateRequest{
    string token = 1;
    string role = 2;
  }
  
  message ValidateResponse{
    int64 status = 1;
    string error = 2;
    int64  userId = 3;
  }